[package]
name = "currex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
reqwest = { version = "0.11.25", features = ["blocking", "json"] }
rust_decimal = "1.34.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"